--- a/_layouts/default_simple.html
+++ b/_layouts/default_simple.html
@@ -6,10 +6,7 @@
     <body>
         <header>
             <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                </ul>
+                {% include menu.html %}
             </nav>
             <h1>{{ site.title }}</h1>
           <p>{{ site.description_en }}</p>
@@ -17,11 +14,11 @@
       
         <main>
             <h2>{{ page.title }}</h2>
-          <p>This is my new website and it's using Simple.css. It's really cool. If you want to use it too, you can <a href="https://simplecss.org">visit their site</a>.</p>
+          {{ content }}
         </main>
       
         <footer>
-          <p>Jane Smith's website.</p>
+          {% include footer.html %}
         </footer>
       </body>
       </html>
