--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <!-- Footer -->
 										
-										<!--<p>Follow Faouët Informatique on Facebook, LinkedIn or your RSS reader for tips and advice, or get in touch.</p>
-										<ul class="icons">
+										<p>Follow Faouët Informatique on Facebook, LinkedIn or your RSS reader for tips and advice, or get in touch.</p>
+										<nav>
+											<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 											<li><a href="https://facebook.com/faouetinformatique" title="Facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 											<li><a href="https://linkedin.com/faouetinformatique" title="LinkedIn" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -12,7 +13,8 @@
 											<!--<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
-										</ul>-->
+										</ul>
+										</nav>
 
 								<!-- Copyright -->
 									<p>&copy; <script>document.write(new Date().getFullYear())</script> Mark Berthelemy</p>
