--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
 									<ul>
 											
 											<li>SIRET: 84816644300012</li>
-											<li>Design: <a href="https://simple.css" target="_blank">HTML5 UP</a></li>
+											<li>Design: <a href="https://simple.css" target="_blank">Simple CSS</a></li>
 											<li>Build: <a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
 										</ul>
 									</nav>
