--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,10 +21,11 @@
 									<nav>	
 									<ul>
 											
-											<li>SIRET: 84816644300012</li>
 											<li>Design: <a href="https://simple.css" target="_blank">Simple CSS</a></li>
 											<li>Build: <a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
 										</ul>
 									</nav>
+									<p>SIRET: <a href="https://data.inpi.fr/entreprises/848166443" target="_blank">84816644300012
+									</a></p>
 
 						
