simplify portfolio layout

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,20 +1,12 @@
-{% assign count = 0 %}
+
 {% for item in site.data.portfolio %}
-
-{% if count == 0 %}<div class="row extra-space">{% endif %}
-    <article class="col-6 col-12-mobile special compressed">
-        <h3>{{ item.name }}</h3>
-        <p>{{ item.description }}</p>
-        <img class="fit border" src="{{ site.baseurl }}/images/portfolio/{{ item.img }}" width="400" alt="{{ item.name }} website screenshot" />
-        <p><a href="{{ item.url }}" target="_blank">Visit {{ item.name }}</a></p>
-        <ul>
-            {%- for attr in item.attributes -%}
-                <li>{{ attr }}</li>
-            {%- endfor -%}
-            </ul>
-    </article>
-
-{% if count == 1 %}</div>{% endif %}
-{% if count == 0 %}{% assign count = 1 %}{% assign endcount = 0 %}{% else %}{% assign count = 0 %}{% endif %}
-{% endfor %}
-{% if endcount == 0 %}</div>{% endif %}
+<h3>{{ item.name }}</h3>
+<p>{{ item.description }}</p>
+<img src="{{ site.baseurl }}/images/portfolio/{{ item.img }}" alt="{{ item.name }} website screenshot" />
+<p><a href="{{ item.url }}" target="_blank">Visit {{ item.name }}</a></p>
+<p>Characteristics:</p>
+<ul>
+    {%- for attr in item.attributes -%}
+        <li>{{ attr }}</li>
+    {%- endfor -%}
+    </ul>
