--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
 {% for item in site.data.portfolio %}
 <h3>{{ item.name }}</h3>
 
-<aside>
+<aside class="portfolio">
     <img src="{{ site.baseurl }}/images/portfolio/{{ item.img }}" alt="{{ item.name }} website screenshot" />
     
 </aside>
