--- a/assets/css/overrides_simple.css
+++ b/assets/css/overrides_simple.css
@@ -11,9 +11,10 @@ aside.portfolio img {
     object-fit: cover;
 }
 
-@media only screen and (max-width: 720px)
+@media only screen and (max-width: 720px) {
 aside.portfolio {
     width: 100%;
+}
 }
 
 
