--- a/assets/css/overrides_simple.css
+++ b/assets/css/overrides_simple.css
@@ -9,6 +9,7 @@ aside.portfolio {
 
 aside.portfolio img {
     object-fit: cover;
+    height: 100%;
 }
 
 @media only screen and (max-width: 720px) {
