--- a/assets/css/overrides_simple.css
+++ b/assets/css/overrides_simple.css
@@ -22,7 +22,7 @@ aside.portfolio img, aside.portrait img {
 }
 
 @media only screen and (max-width: 720px) {
-aside.portfolio {
+aside.portfolio, aside.portrait {
     width: 100%;
 }
 }
