hide prices page from menu

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -13,7 +13,7 @@
 									</ul>-->
 								</li>
 								<li><a href="{{ site.baseurl }}/portfolio">Portfolio</a></li>
-								<li><a href="{{ site.baseurl }}/prices">Prices</a></li>
+								<!--<li><a href="{{ site.baseurl }}/prices">Prices</a></li>-->
 								<li><a href="{{ site.baseurl }}/about">About</a></li>
 								<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
 							</ul>
