--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -3,5 +3,5 @@
 {% elsif page.cta %}
 <p class="center"><a class="button" href="{{ site.baseurl }}/{{ page.cta-url}}">{{ page.cta }}</a></p>
 {% else %}
-<p class="center"><a class="button" href="{{ site.baseurl }}/contact">Request a no-obligation quote</a></p>
+<p class="center"><a class="button" href="{{ site.baseurl }}/contact">Contact us</a></p>
 {% endif %}
