--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 										
-										<p>Follow Faouët Informatique on Facebook, LinkedIn or your RSS reader for tips and advice, or get in touch.</p>
+										<!--<p>Follow Faouët Informatique on Facebook, LinkedIn or your RSS reader for tips and advice, or get in touch.</p>-->
 										<nav>
 											<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
@@ -9,6 +9,8 @@
 											<li><a href="{{ site.baseurl }}/feed.xml" title="RSS" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
 											<li><a href="mailto:{{ site.email }}?subject=Website query" title="Email {{ site.email }}" class="icon brands"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
 											<li><a href="tel:{{ site.phone }}" title="Phone" class="icon brands"><i class="fas fa-phone"></i><span class="label">Phone</span></a></li>
+											<li>SIRET: <a href="https://data.inpi.fr/entreprises/848166443" target="_blank">84816644300012
+											</a></li>
 											<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>-->
 											<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
@@ -25,8 +27,7 @@
 											<li>Build: <a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
 										</ul>
 									</nav>
-									<p>SIRET: <a href="https://data.inpi.fr/entreprises/848166443" target="_blank">84816644300012
-									</a></p>
+									
 
 									<div id="wcb" class="carbonbadge wcb-d"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
