hide social links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,9 +4,9 @@
 										<nav>
 											<ul class="icons">
 											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
-											<li><a href="https://facebook.com/faouetinformatique" title="Facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+											<!--<li><a href="https://facebook.com/faouetinformatique" title="Facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 											<li><a href="https://linkedin.com/faouetinformatique" title="LinkedIn" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-											<li><a href="{{ site.baseurl }}/feed.xml" title="RSS" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
+											<li><a href="{{ site.baseurl }}/feed.xml" title="RSS" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>-->
 											<li><a href="mailto:{{ site.email }}?subject=Website query" title="Email {{ site.email }}" class="icon brands"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
 											<li><a href="tel:{{ site.phone }}" title="Phone" class="icon brands"><i class="fas fa-phone"></i><span class="label">Phone</span></a></li>
 											<li>SIRET: <a href="https://data.inpi.fr/entreprises/848166443" target="_blank">84816644300012
