--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,27 @@
 <!-- Footer -->
 										
 										<!--<p>Follow Faouët Informatique on Facebook, LinkedIn or your RSS reader for tips and advice, or get in touch.</p>-->
-										<nav>
+										<!--<nav>
 											<ul class="icons">
-											<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
-											<!--<li><a href="https://facebook.com/faouetinformatique" title="Facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a href="https://facebook.com/faouetinformatique" title="Facebook" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 											<li><a href="https://linkedin.com/faouetinformatique" title="LinkedIn" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-											<li><a href="{{ site.baseurl }}/feed.xml" title="RSS" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>-->
+											<li><a href="{{ site.baseurl }}/feed.xml" title="RSS" class="icon brands"><i class="fas fa-rss"></i><span class="label">RSS</span></a></li>
 											<li><a href="mailto:{{ site.email }}?subject=Website query" title="Email {{ site.email }}" class="icon brands"><i class="fas fa-envelope"></i><span class="label">Email</span></a></li>
 											<li><a href="tel:{{ site.phone }}" title="Phone" class="icon brands"><i class="fas fa-phone"></i><span class="label">Phone</span></a></li>
-											<li>SIRET: <a href="https://data.inpi.fr/entreprises/848166443" target="_blank">84816644300012
-											</a></li>
-											<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
-											<!--<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>-->
-											<!--<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
-											<!--<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
+											
+											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+											<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+											<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
 										</ul>
-										</nav>
+										</nav>-->
 
 								<!-- Copyright -->
-									<p>&copy; <script>document.write(new Date().getFullYear())</script> Mark Berthelemy</p>
+									<p>&copy; <script>document.write(new Date().getFullYear())</script> Mark Berthelemy
+									<br />
+									SIRET: <a href="https://data.inpi.fr/entreprises/848166443" target="_blank">84816644300012
+									</a></p>
 									<nav>	
 									<ul>
 											
