add privacy policy to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,7 @@
 											
 											<li>Design: <a href="https://simple.css" target="_blank">Simple CSS</a></li>
 											<li>Build: <a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
+											<li><a href="{{ site.baseurl }}/privacy-policy">Privacy policy</a></li>
 										</ul>
 									</nav>
 									
