--- a/_layouts/default_simple.html
+++ b/_layouts/default_simple.html
@@ -13,7 +13,7 @@
         </header>
       
         <main>
-            <h2>{{ page.title }}</h2>
+            {% if page.title !="Home" %}<h2>{{ page.title }}</h2>{% endif %}
           {{ content }}
         </main>
       
