add current class to nav

--- a/assets/css/overrides_simple.css
+++ b/assets/css/overrides_simple.css
@@ -2,6 +2,10 @@
     --accent: #198754;
   }
 
+nav li.current {
+    background-color: var(--accent);
+}
+
 aside.portfolio, aside.portrait {
     padding: 0;
     border: none;
