--- a/assets/css/overrides_simple.css
+++ b/assets/css/overrides_simple.css
@@ -21,7 +21,7 @@ aside.portrait {
 
 aside.portfolio img, aside.portrait img {
     object-fit: cover;
-    background-color: var(--bg)
+    background-color: var(--bg);
     height: 100%;
     border: 1px solid var(--border);
 }
