--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,8 @@
 <ul>
 	{% assign items = site.data.menu | sort: 'order' %}
 	{% for item in items %}
-	<li><a href="{{ site.baseurl }}{{ item.url }}">{{ item.name }}</a></li>
+	{% if item.url == page.url %}{% assign class = "current" %}{% endif %}
+	<li><a class="{{ class }}" href="{{ site.baseurl }}{{ item.url }}">{{ item.name }}</a></li>
 	{% endfor %}
 </ul>						
 							<ul>
