--- a/assets/css/overrides_simple.css
+++ b/assets/css/overrides_simple.css
@@ -4,6 +4,8 @@
 
 header nav li a.current {
     background-color: var(--accent);
+    color: var(--bg);
+    font-weight: bold;
 }
 
 aside.portfolio, aside.portrait {
