--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,8 +25,7 @@
 									<nav>	
 									<ul>
 											
-											<li>Design: <a href="https://simple.css" target="_blank">Simple CSS</a></li>
-											<li>Build: <a href="{{ site.baseurl }}/">{{ site.title }}</a></li>
+											<li>Design based on <a href="https://simple.css" target="_blank">Simple CSS</a></li>
 											<li><a href="{{ site.baseurl }}/privacy-policy">Privacy policy</a></li>
 										</ul>
 									</nav>
