--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,14 +22,8 @@
 									<br />
 									SIRET: <a href="https://data.inpi.fr/entreprises/848166443" target="_blank">84816644300012
 									</a></p>
-									<nav>	
-									<ul>
-											
-											<li>Design based on <a href="https://simple.css" target="_blank">Simple CSS</a></li>
-											<li><a href="{{ site.baseurl }}/privacy-policy">Privacy policy</a></li>
-										</ul>
-									</nav>
-									
+									<p>Design based on <a href="https://simple.css" target="_blank">Simple CSS</a></p>
+									<p><a href="{{ site.baseurl }}/privacy-policy">Privacy policy</a></p>
 
 									<div id="wcb" class="carbonbadge wcb-d"></div>
 <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
