--- a/_layouts/default_simple.html
+++ b/_layouts/default_simple.html
@@ -9,7 +9,7 @@
                 {% include menu.html %}
             </nav>
             <h1>{{ site.title }}</h1>
-          <p>{{ site.description_en }}</p>
+          <p>{{ site.description }}</p>
         </header>
       
         <main>
