--- a/_includes/head_simple.html
+++ b/_includes/head_simple.html
@@ -2,7 +2,7 @@
 		<title>{{ site.title }} | {{ page.title }}</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-    	<meta name="description" content="{{ site.description_en }} {{ site.description_fr }}">
+    	<meta name="description" content="{{ site.description }} {{ site.description }}">
 
 		
     	<!-- Facebook Meta Tags -->
@@ -10,7 +10,7 @@
   	<meta property="og:type" content="website">
   	<meta property="og:title" content="{{ site.title }} | {{ page.title }}">
   	<meta property="og:description" content="{{ site.description }}">
-  	<meta property="og:image" content="/images/hand-3286887_1280.jpg">
+  	<meta property="og:image" content="{{ site.baseurl }}/images/hand-3286887_1280.jpg">
 
   	<!-- Twitter Meta Tags -->
   	<meta name="twitter:card" content="summary_large_image">
@@ -18,7 +18,7 @@
   	<meta property="twitter:url" content="{{ site.url }}{{ site.baseurl }}">
   	<meta name="twitter:title" content="{{ site.title }} | {{ page.title ">
   	<meta name="twitter:description" content="{{ site.description }}">
-  	<meta name="twitter:image" content="/images/hand-3286887_1280.jpg">
+  	<meta name="twitter:image" content="{{ site.baseurl }}/images/hand-3286887_1280.jpg">
         	
 		<!-- Simple CSS -->
 		<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
