--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
 									<p>Design based on <a href="https://simple.css" target="_blank">Simple CSS</a></p>
 									<p><a href="{{ site.baseurl }}/privacy-policy">Privacy policy</a></p>
 
-									<div id="wcb" class="carbonbadge wcb-d"></div>
-<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
+									<!--<div id="wcb" class="carbonbadge wcb-d"></div>
+<script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>-->
 
 						
