--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
 									<br />
 									SIRET: <a href="https://data.inpi.fr/entreprises/848166443" target="_blank">84816644300012
 									</a></p>
-									<p>Design based on <a href="https://simple.css" target="_blank">Simple CSS</a></p>
+									<p>Design based on <a href="hhttps://simplecss.org/" target="_blank">Simple CSS</a></p>
 									<p><a href="{{ site.baseurl }}/privacy-policy">Privacy policy</a></p>
 
 									<!--<div id="wcb" class="carbonbadge wcb-d"></div>
